--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     </head>
   <body>
     <h1>Home</h1>
-
+        <p> Welcome!  This is the home page of the *insert game name* website.  From here, you can find links about our project.
+        </p>
 
 </html>
