--- a/creators.html
+++ b/creators.html
@@ -11,5 +11,8 @@
         <p> Here you can learn about the creators of our project.
         </p>
     <p>Zavian Caple: Lead 3D Artist and Social Impact Engineer</p>
+    <p>Yeslyn Castro: Python Programmer and Graphic Designer</p>
+    <p>Gavin Doherty: Lead Web Designer and Game Designer</p>
+    <p>Aurelia Keberle: Project Manager and Head of Buisness and Marketing</p>
 
 </html>
