--- a/creators.html
+++ b/creators.html
@@ -8,11 +8,11 @@
     </head>
   <body>
     <h1>The Creators</h1>
-        <p> Here you can learn about the creators of our project.
+        <p> Here you can learn about the creators of our project.  Just click on a name to go to their page!
         </p>
-    <p>Zavian Caple: Lead 3D Artist and Social Impact Engineer</p>
-    <p>Yeslyn Castro: Python Programmer and Graphic Designer</p>
-    <p>Gavin Doherty: Lead Web Designer and Game Designer</p>
-    <p>Aurelia Keberle: Project Manager and Head of Buisness and Marketing</p>
+<a href="url">Zavian Caple: Lead 3D Artist and Social Impact Engineer</a>
+<a href="url">Yeslyn Castro: Python Programmer and Graphic Designer</a>
+<a href="url">Gavin Doherty: Lead Web Designer and Game Designer</a>
+<a href="url">Aurelia Keberle: Project Manager and Head of Buisness and Marketing</a>
 
 </html>
