--- a/game.html
+++ b/game.html
@@ -1,5 +1,17 @@
-<DOCT TYPE=HTML>
+<!DOCTTYPE=HTML>
+<html lang=en>
+    <head>
+       <meta charset="UTF-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <meta name="author" content="Gavin A. Doherty">
+       <title>About</title>
+       <link rel="stylesheet" href="style.css">
+   </head>
+<body>
+ <h1>About Our Game</h1>
+  <p>Our game focuses on how misinformation effects people's ideas.  It asks the users questions, to which the user would respond "true" or "false."
+     We mix questions whose answers are both honest and dishonest to simulate how information sources can spread information.
+  </p>
+</body>
 
-
-
- </html>
+</html>
