--- a/creators.html
+++ b/creators.html
@@ -12,7 +12,7 @@
         </p>
 <a href="url">Zavian Caple: Lead 3D Artist and Social Impact Engineer</a>
 <a href="url">Yeslyn Castro: Python Programmer and Graphic Designer</a>
-<a href="url">Gavin Doherty: Lead Web Designer and Game Designer</a>
+<a href="https://gavinad.github.io/game/about.html">Gavin Doherty: Lead Web Designer and Game Designer</a>
 <a href="url">Aurelia Keberle: Project Manager and Head of Buisness and Marketing</a>
 
 </html>
