--- a/game.html
+++ b/game.html
@@ -7,6 +7,15 @@
        <title>About</title>
        <link rel="stylesheet" href="style.css">
    </head>
+
+<nav id="topNav">
+  <ul>
+    <li> <a href="index.html">Home</a> </li>
+    <li> <a href="creators.html">The Creators</a> </li>
+    <li> <a href="game.html">About The Game</a> </li>
+  </ul>
+</nav>
+
 <body>
  <h1>About Our Game</h1>
   <p>Our game focuses on how misinformation effects people's ideas.  It asks the users questions, to which the user would respond "true" or "false."
