--- a/creators.html
+++ b/creators.html
@@ -6,6 +6,15 @@
         <meta name="author" content="Gavin A. Doherty">
         <title>The Creators</title>
     </head>
+
+<nav id="topNav">
+  <ul>
+    <li> <a href="index.html">Home</a> </li>
+    <li> <a href="creators.html">The Creators</a> </li>
+    <li> <a href="game.html">About The Game</a> </li>
+  </ul>
+</nav>
+
   <body>
     <h1>The Creators</h1>
         <p> Here you can learn about the creators of our project.  Just click on a name to go to their page!
