--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
         <meta name="author" content="Gavin A. Doherty">
         <title>Home</title>
     </head>
+
+<nav id="topNav">
+  <ul>
+    <li> <a href="index.html">Home</a> </li>
+    <li> <a href="creators.html">The Creators</a> </li>
+    <li> <a href="game.html">About The Game</a> </li>
+  </ul>
+</nav>
+
   <body>
     <h1>Home</h1>
-        <p> Welcome!  This is the home page of the *insert game name* website.  From here, you can find links about our project.
+        <p> Welcome!  This is the home page of the *insert game name* website.  Use the navigator about to learn more.
         </p>
-
+    </body>
 </html>
