--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <h1>Home</h1>
-        <p> Welcome!  This is the home page of the *insert game name* website.  Use the navigator about to learn more.
+        <p> Welcome!  This is the home page of the *insert game name* website.  Use the navigator above to learn more.
         </p>
     </body>
 </html>
