--- a/creators.html
+++ b/creators.html
@@ -25,7 +25,7 @@
 <br>
 <a href="https://gavinad.github.io/game/about.html">Gavin Doherty: Lead Web Designer and Game Designer</a>
 <br>
-<a href="url">Aurelia Keberle: Project Manager and Head of Buisness and Marketing</a>
+<a href="https://amkeberle.github.io/game/index.html">Aurelia Keberle: Project Manager and Head of Buisness and Marketing</a>
 <br>
 
 </html>
