--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Gavin A. Doherty">
         <title>Home</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
 <nav id="topNav">
