--- a/game.html
+++ b/game.html
@@ -18,8 +18,8 @@
 
 <body>
  <h1>About Our Game</h1>
-  <p>Our game focuses on how misinformation effects people's ideas.  It asks the users questions, to which the user would respond "true" or "false."
-     We mix questions whose answers are both honest and dishonest to simulate how information sources can spread information.
+  <p>Our game focuses on how misinformation effects people's ideas.  It asks the users questions, <br>to which the user would respond "true" or "false."
+     We mix questions whose answers are both honest <br>and dishonest to simulate how information sources can spread information.
   </p>
 </body>
 
