--- a/creators.html
+++ b/creators.html
@@ -20,13 +20,13 @@
     <h1>The Creators</h1>
         <p> Here you can learn about the creators of our project.  Just click on a name to go to their page!
         </p>
-<a href="url">Zavian Caple: Lead 3D Artist and Social Impact Engineer</a>
+<a href="url">Zavian Caple - Lead 3D Artist and Social Impact Engineer</a>
 <br>
-<a href="url">Yeslyn Castro: Python Programmer and Graphic Designer</a>
+<a href="url">Yeslyn Castro - Python Programmer and Graphic Designer</a>
 <br>
-<a href="https://gavinad.github.io/game/about.html">Gavin Doherty: Lead Web Designer and Game Designer</a>
+<a href="https://gavinad.github.io/game/about.html">Gavin Doherty - Lead Web Designer and Game Designer</a>
 <br>
-<a href="https://amkeberle.github.io/game/index.html">Aurelia Keberle: Project Manager and Head of Buisness and Marketing</a>
+<a href="https://amkeberle.github.io/game/index.html">Aurelia Keberle - Project Manager and Head of Buisness and Marketing</a>
 <br>
 
 </html>
