--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <h1>Home</h1>
-        <p> Welcome!  This is the home page of the *insert game name* website.  Use the navigator above to learn more.
+        <p> Welcome!  This is the home page of the Don’t Be Fooled: Deciphering Fake News website.  Use the navigator above to learn more.
         </p>
     </body>
 </html>
