--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </nav>
 
   <body>
-    <h1>Home</h1>
+    <h1>Don’t Be Fooled: Deciphering Fake News</h1>
+      <h3>True or False? That’s a good question!</h3>
         <p> Welcome!  This is the home page of the Don’t Be Fooled: Deciphering Fake News website.  Use the navigator above to learn more.
         </p>
     </body>
