--- a/game.html
+++ b/game.html
@@ -18,8 +18,11 @@
 
 <body>
  <h1>About Our Game</h1>
-  <p>Our game focuses on how misinformation effects people's ideas.  It asks the users questions, <br>to which the user would respond "true" or "false."
-     We mix questions whose answers are both honest <br>and dishonest to simulate how information sources can spread information.
+  <p>Don’t Be Fooled: Deciphering Fake News is an interactive quiz game that is<br>
+      geared towards teens who use social media regularly, and, more specifically,<br>
+      receive their news from social media platforms. Players are guided through a series of<br>
+      true and false questions, which they answer by tilting a handheld device.<br>
+      Is it actually true or actually false? Don’t be fooled!
   </p>
 </body>
 
