--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <h1>Don’t Be Fooled: Deciphering Fake News</h1>
       <h3>True or False? That’s a good question!</h3>
-        <p> Welcome!  This is the home page of the Don’t Be Fooled: Deciphering Fake News website.  Use the navigator above to learn more.
+        <p> What is really true?  In the digital age, more information than any person could ever learn is available at your fingertips.  But with this much information, some of it will inevitably be false.  This begs the question, what information should we believe?  Especially when around every corner there’s information to support your own biases.  Let’s see how well you do.
         </p>
     </body>
 </html>
