--- a/creators.html
+++ b/creators.html
@@ -22,7 +22,7 @@
         </p>
 <a href="url">Zavian Caple - Lead 3D Artist and Social Impact Engineer</a>
 <br>
-<a href="url">Yeslyn Castro - Python Programmer and Graphic Designer</a>
+<a href="https://yeslyn.github.io/game-/about.html">Yeslyn Castro - Python Programmer and Graphic Designer</a>
 <br>
 <a href="https://gavinad.github.io/game/about.html">Gavin Doherty - Lead Web Designer and Game Designer</a>
 <br>
