--- a/creators.html
+++ b/creators.html
@@ -7,6 +7,10 @@
         <title>The Creators</title>
         <link rel="stylesheet" href="style.css">
     </head>
+<style>
+    h1 {text-align: center;}
+    p {text-align: center;}
+</style>
 
 <nav id="topNav">
   <ul>
