--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<style>
+    h1 {text-alignment: center;}
+    h3 {text-alighment: center;}
+    p {text-alignment: center;}
+</style>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
