--- a/game.html
+++ b/game.html
@@ -15,6 +15,9 @@
     <li> <a href="game.html">About The Game</a> </li>
   </ul>
 </nav>
+<style>
+    body {text-alignment: center;}
+</style>
 
 <body>
  <h1>About Our Game</h1>
