--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
 
 <style>
-    h1 {text-alignment: center;}
-    h3 {text-alighment: center;}
-    p {text-alignment: center;}
+    h1 {text-align: center;}
+    h3 {text-align: center;}
+    p {text-align: center;}
 </style>
     
 <nav id="topNav">
