--- a/creators.html
+++ b/creators.html
@@ -8,9 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <style>
-    h1 {text-align: center;}
-    p {text-align: center;}
-    a {text-align: center;}
+    body {text-align: center;}
 </style>
 
 <nav id="topNav">
