--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     </head>
 
 <style>
-    h1 {text-align: center;}
-    h3 {text-align: center;}
-    p {text-align: center;}
+    body {text-align: center;}
 </style>
     
 <nav id="topNav">
