--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </nav>
         
 <p float="left">
-  <img src="Thumbsup.png" width="100" />
-  <img src="Thumbsdown.png" width="100" /> 
+  <a href="creators.html" img src="Thumbsup.png" width="100" a/>
+  <a href="game.html" img src="Thumbsdown.png" width="100" a/> 
 </p>
