--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@
         <title>Home</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    
-<nav id="topNav">
-  <ul>
-    <li> <a href="index.html">Home</a> </li>
-    <li> <a href="creators.html">The Creators</a> </li>
-    <li> <a href="game.html">About The Game</a> </li>
-  </ul>
-</nav>
         
-<p float="left">
-  <a href="creators.html" img src="Thumbsup.png" width="100" a/>
-  <a href="game.html" img src="Thumbsdown.png" width="100" a/> 
-</p>
+    <p float="left">
+        <a href="creators.html" img src="Thumbsup.png" width="100" a/>
+        <a href="game.html" img src="Thumbsdown.png" width="100" a/> 
+    </p>
+</html>
