--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
         <meta name="author" content="Gavin A. Doherty">
         <title>Home</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-    <p float="left">
-        <a href="creators.html"><img src="Thumbsup.png" width="700" a/>
-        <a href="game.html"><img src="Thumbsdown.png" width="700" a/> 
-    </p>
+        <button class="btn"><i class="fa fa-home"></i> Home</button>
+        <p float="left">
+            <a href="creators.html"><img src="Thumbsup.png" width="700" a/>
+            <a href="game.html"><img src="Thumbsdown.png" width="700" a/> 
+        </p>
 </html>
