--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
        <meta name="author" content="Gavin A. Doherty">
        <title>About</title>
        <link rel="stylesheet" href="style.css">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    </head>
    <style>
         body {text-align: center;}
