--- a/creators.html
+++ b/creators.html
@@ -6,17 +6,11 @@
         <meta name="author" content="Gavin A. Doherty">
         <title>The Creators</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 <style>
     body {text-align: center;}
 </style>
-
-<nav id="topNav">
-  <ul>
-    <li> <a href="index.html">Home</a> </li>
-  </ul>
-</nav>
-
   <body>
     <h1>The Creators</h1>
         <p> Here you can learn about the creators of our project.  Just click on a name to go to their page!
