--- a/creators.html
+++ b/creators.html
@@ -12,6 +12,7 @@
     body {text-align: center;}
 </style>
   <body>
+      <button class="btn"><i class="fa fa-home"></i> Home</button>
     <h1>The Creators</h1>
         <p> Here you can learn about the creators of our project.  Just click on a name to go to their page!
         </p>
