--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
         body {text-align: center;}
    </style>
    <body>
+      <button class="btn"><i class="fa fa-home"></i> Home</button>
         <h1>About Our Game</h1>
         <p>Don’t Be Fooled: Deciphering Fake News is an interactive quiz game that is<br>
             geared towards teens who use social media regularly, and, more specifically,<br>
