--- a/creators.html
+++ b/creators.html
@@ -8,21 +8,21 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-<style>
-    body {text-align: center;}
-</style>
-  <body>
-      <button class="btn"><i class="fa fa-home"></i> Home</button>
-    <h1>The Creators</h1>
+    <style>
+        body {text-align: center;}
+    </style>
+    <body>
+        <button class="btn"><i class="fa fa-home"></i> Home</button>
+        <h1>The Creators</h1>
         <p> Here you can learn about the creators of our project.  Just click on a name to go to their page!
         </p>
-<a href="url">Zavian Caple - Lead 3D Artist and Social Impact Engineer</a>
-<br>
-<a href="https://yeslyn.github.io/game-/about.html">Yeslyn Castro - Python Programmer and Graphic Designer</a>
-<br>
-<a href="https://gavinad.github.io/game/about.html">Gavin Doherty - Lead Web Designer and Game Designer</a>
-<br>
-<a href="https://amkeberle.github.io/game/index.html">Aurelia Keberle - Project Manager and Head of Buisness and Marketing</a>
-<br>
-
+        <a href="url">Zavian Caple - Lead 3D Artist and Social Impact Engineer</a>
+        <br>
+        <a href="https://yeslyn.github.io/game-/about.html">Yeslyn Castro - Python Programmer and Graphic Designer</a>
+        <br>
+        <a href="https://gavinad.github.io/game/about.html">Gavin Doherty - Lead Web Designer and Game Designer</a>
+        <br>
+        <a href="https://amkeberle.github.io/game/index.html">Aurelia Keberle - Project Manager and Head of Buisness and Marketing</a>
+        <br>
+    </body>
 </html>
