--- a/creators.html
+++ b/creators.html
@@ -9,7 +9,8 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <style>
-        body {text-align: center;}
+        p {text-align: center;}
+        h1 {text-align: center;}
     </style>
     <body>
         <button class="btn"><i class="fa fa-home"></i> Home</button>
