--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
         h1 {text-align: center;}
    </style>
    <body>
-      <button class="btn"><i class="fa fa-home"></i> Home</button>
+      <button class="btn"><a href="creators.html"> width="700" a/><i class="fa fa-home"></i> Home</button>
         <h1>About Our Game</h1>
         <p>Don’t Be Fooled: Deciphering Fake News is an interactive quiz game that is<br>
             geared towards teens who use social media regularly, and, more specifically,<br>
