--- a/game.html
+++ b/game.html
@@ -13,13 +13,14 @@
         h1 {text-align: center;}
    </style>
    <body>
-      <button class="btn"><a href="creators.html"> width="700" a/><i class="fa fa-home"></i> Home</button>
-        <h1>About Our Game</h1>
-        <p>Don’t Be Fooled: Deciphering Fake News is an interactive quiz game that is<br>
+      <button class="btn"><i class="fa fa-home"></i> Home</button>
+         <a href="creators.html"> width="700" a/>
+      <h1>About Our Game</h1>
+      <p>Don’t Be Fooled: Deciphering Fake News is an interactive quiz game that is<br>
             geared towards teens who use social media regularly, and, more specifically,<br>
             receive their news from social media platforms. Players are guided through a series of<br>
             true and false questions, which they answer by tilting a handheld device.<br>
             Is it actually true or actually false? Don’t be fooled!
-        </p>
+      </p>
    </body>
 </html>
