--- a/creators.html
+++ b/creators.html
@@ -13,7 +13,7 @@
         h1 {text-align: center;}
     </style>
     <body>
-        <button class="btn"><i class="fa fa-home"></i> Home</button>
+        <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
         <h1>The Creators</h1>
         <p> Here you can learn about the creators of our project.  Just click on a name to go to their page!
         </p>
