--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <button class="btn"><i class="fa fa-home"></i> Home</button>
+        <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
         <p float="left">
             <a href="creators.html"><img src="Thumbsup.png" width="700" a/>
             <a href="game.html"><img src="Thumbsdown.png" width="700" a/> 
