--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
         p {text-align: center;}
         h1 {text-align: center;}
    </style>
-   <body>
+   <body class="game">
       <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
       <h1>About Our Game</h1>
       <p>Don’t Be Fooled: Deciphering Fake News is an interactive quiz game that is<br>
