--- a/creators.html
+++ b/creators.html
@@ -12,7 +12,7 @@
         p {text-align: center;}
         h1 {text-align: center;}
     </style>
-    <body>
+    <body class="creators">
         <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
         <h1>The Creators</h1>
         <p> Here you can learn about the creators of our project.  Just click on a name to go to their page!
