--- a/creators.html
+++ b/creators.html
@@ -16,14 +16,45 @@
         <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
         <h1>The Creators</h1>
         <p> Here you can learn about the creators of our project.  Just click on a name to go to their page!
-        </p>
-        <a href="url">Zavian Caple - Lead 3D Artist and Social Impact Engineer</a>
-        <br>
-        <a href="https://yeslyn.github.io/game-/about.html">Yeslyn Castro - Python Programmer and Graphic Designer</a>
-        <br>
-        <a href="https://gavinad.github.io/game/about.html">Gavin Doherty - Lead Web Designer and Game Designer</a>
-        <br>
-        <a href="https://amkeberle.github.io/game/index.html">Aurelia Keberle - Project Manager and Head of Buisness and Marketing</a>
-        <br>
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Jane Doe</h2>
+        <p class="title">CEO & Founder</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>jane@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="/w3images/team2.jpg" alt="Mike" style="width:100%">
+      <div class="container">
+        <h2>Mike Ross</h2>
+        <p class="title">Art Director</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>mike@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="/w3images/team3.jpg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>John Doe</h2>
+        <p class="title">Designer</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>john@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+</div>
     </body>
 </html>
