--- a/creators.html
+++ b/creators.html
@@ -16,5 +16,21 @@
         <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
         <h1>The Creators</h1>
         <p> Here you can learn about the creators of our project.  Just click on a name to go to their page!
+        <img src="Image1.png" alt="AureliaPicture" width="100%">
+        <a href="https://amkeberle.github.io/game/index.html">Aurelia Keberle</a>
+        <h4>Project Manager and Head of Business and Marketing</h4>
+        <p>Insert Bio</p>
+        <img src="Image1.png" alt="GavinPicture" width="100%">
+        <a href="https://gavinad.github.io/game/about.html">Gavin Doherty</a>
+        <h4>Lead Web Designer and Gameplay Designer</h4>
+        <p>Insert Bio</p>
+        <img src="Image1.png" alt="YeslynPicture" width="100%">
+        <a href="https://yeslyn.github.io/game-/about.html">Yeslyn Castro</a>
+        <h4>Python Programmer and Graphic Designer</h4>
+        <p>Insert Bio</p>
+        <img src="Image1.png" alt="ZavianPicture" width="100%">
+        <a href="inserturl">Zavian Caple</a>
+        <h4>Lead 3-D Artist and Social Impact Engineer</h4>
+        <p>Insert Bio</p>
     </body>
 </html>
