--- a/creators.html
+++ b/creators.html
@@ -15,7 +15,7 @@
     <body class="creators">
         <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
         <h1>The Creators</h1>
-        <img src="AureliaImage.png" alt="AureliaPicture" width="50%">
+        <img src="AureliaImage.png" alt="AureliaPicture" class="center">
         <a href="https://amkeberle.github.io/game/index.html">Aurelia Keberle</a>
         <h4>Project Manager and Head of Business and Marketing</h4>
         <p>Insert Bio</p>
