--- a/creators.html
+++ b/creators.html
@@ -19,15 +19,15 @@
         <a href="https://amkeberle.github.io/game/index.html">Aurelia Keberle</a>
         <h4>Project Manager and Head of Business and Marketing</h4>
         <p>Insert Bio</p>
-        <img src="Image1.png" alt="GavinPicture" width="100%">
+        <img src="Image1.png" alt="GavinPicture" class="creators">
         <a href="https://gavinad.github.io/game/about.html">Gavin Doherty</a>
         <h4>Lead Web Designer and Gameplay Designer</h4>
         <p>Insert Bio</p>
-        <img src="Image1.png" alt="YeslynPicture" width="100%">
+        <img src="Image1.png" alt="YeslynPicture" class="creators">
         <a href="https://yeslyn.github.io/game-/about.html">Yeslyn Castro</a>
         <h4>Python Programmer and Graphic Designer</h4>
         <p>Insert Bio</p>
-        <img src="Image1.png" alt="ZavianPicture" width="100%">
+        <img src="Image1.png" alt="ZavianPicture" class="creators">
         <a href="inserturl">Zavian Caple</a>
         <h4>Lead 3-D Artist and Social Impact Engineer</h4>
         <p>Insert Bio</p>
