--- a/creators.html
+++ b/creators.html
@@ -12,7 +12,9 @@
         p {text-align: center;}
         h1 {text-align: center;}
     </style>
-    <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
+    <body class="index">
+        <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
+    </body>
     <body class="creators">
         <h1>The Creators</h1>
         <img src="AureliaImage.png" alt="AureliaPicture" class="creators">
