--- a/creators.html
+++ b/creators.html
@@ -12,7 +12,7 @@
         p {text-align: center;}
         h1 {text-align: center;}
     </style>
-    <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
+    <a href="index.html" class= "button"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
     <body class="creators">
         <h1>The Creators</h1>
         <img src="AureliaImage.png" alt="AureliaPicture" class="creators">
