--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
             true and false questions, which they answer by tilting a handheld device.<br>
             Is it actually true or actually false? Don’t be fooled!
       </p>
-      <img scr="Controller.png" alt="Controller" width="310" height="250">
+      <img scr="Controller.png" alt="Controller" class="creators">
       <p>The controller for the game detects the users motion.  The user moves the<br>
          controller up or down based on how they wish to respond.  This gives the user<br>
          a more immersive experience to pressing buttons on a keyboard or controller.
