--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
    <style>
         p {text-align: center;}
         h1 {text-align: center;}
+        img {text-align: center;}
    </style>
    <body class="game">
       <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
