--- a/creators.html
+++ b/creators.html
@@ -18,7 +18,7 @@
         <img src="AureliaImage.png" alt="AureliaPicture" class="creators">
         <a href="https://amkeberle.github.io/game/index.html">Aurelia Keberle</a>
         <h4>Project Manager and Head of Business and Marketing</h4>
-        <p>Insert Bio</p>
+        <p>Aurelia is a senior at ESUMS. Her favorite subjects are Biology and Math, and she enjoys participating in hands-on projects. Next year, Aurelia will be attending Yale University.</p>
         <img src="Image3.png" alt="GavinPicture" class="creators">
         <a href="https://gavinad.github.io/game/about.html">Gavin Doherty</a>
         <h4>Lead Web Designer and Gameplay Designer</h4>
