--- a/game.html
+++ b/game.html
@@ -16,10 +16,10 @@
    <body class="game">
       <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
       <h1>About Our Game</h1>
-      <p>Don’t Be Fooled: Deciphering Fake News is an interactive quiz game that is<br>
+      <p>"Don’t Be Fooled: Deciphering Fake News" is an interactive quiz game that is<br>
             geared towards teens who use social media regularly, and, more specifically,<br>
             receive their news from social media platforms. Players are guided through a series of<br>
-            true and false questions, which they answer by tilting a handheld device.<br>
+            true and false questions, which they answer by tilting a thumb remote.<br>
             Is it actually true or actually false? Don’t be fooled!
       </p>
       <img src="Controller.png" alt="Controller" width="310" height="250" class="game">
