--- a/creators.html
+++ b/creators.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=100%, initial-scale=1.0">
-        <meta name="author" content="Gavin A. Doherty">
+        <meta name="author" content="Aurelia Keberle">
         <title>The Creators</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
