--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </head>
     <body class="index">
         <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
-        <p float="left">
-            <a href="creators.html"><img src="Thumbsup.png" width="700" a/>
-            <a href="game.html"><img src="Thumbsdown.png" width="700" a/> 
-        </p>
+        <div id="thumbs">
+            <a href="creators.html"><img src="Thumbsup.png" max-width="700" a/>
+            <a href="game.html"><img src="Thumbsdown.png" max-width="700" a/> 
+        </div>
 </html>
