--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     </head>
     <body class="index">
         <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
-        <div id="thumbs">
-            <a href="creators.html"><img src="Thumbsup.png" max-width="700" a/>
-            <a href="game.html"><img src="Thumbsdown.png" max-width="700" a/> 
+        <div class="thumbs">
+             <div class="flex-child magenta">
+                <a href="creators.html"><img src="Thumbsup.png" ><a/>
+             </div>
+             <div class="flex-child green">
+                <a href="game.html"><img src="Thumbsdown.png" ><a/> 
+             </div>
         </div>
 </html>
