--- a/game.html
+++ b/game.html
@@ -27,5 +27,7 @@
          controller up or down based on how they wish to respond.  This gives the user<br>
          a more immersive experience to pressing buttons on a keyboard or controller.
       </p>
+      <h3>How Our Game Works</h3>
+      <iframe width="500" height="440" frameborder="0" src="https://ncase.me/loopy/v1.1/?embed=1&data=[[[3,584,152,0.16,%22Fake%2520News%22,0],[4,562,498,0.16,%22Uninformed%2520Decisions%22,0],[5,723,336,0.16,%22People%2520are%2520Misinformed%22,0],[9,910,171,1,%22DON'T%2520BE%2520FOOLED%22,5]],[[3,5,12,1,0],[4,3,152,1,0],[5,4,15,1,0],[9,5,19,-1,0]],[],10%5D"></iframe>
    </body>
 </html>
