--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
         p {text-align: center;}
         h1 {text-align: center;}
         img {text-align: center;}
+        h3 {text-align: center;}
    </style>
    <body class="game">
       <a href="index.html"><button class="btn"><i class="fa fa-home"></i>  Home</button></a>
