--- a/game.html
+++ b/game.html
@@ -32,7 +32,7 @@
       <p>Hover over the "Fake News" bubble and click the arrow pointing up.  Notice what happens to the other bubbles. <br>
          Then, do the same for the "DON'T BE FOOLED" bubble, and once again notice how our game affects the overall problem.
       </p>
-      <iframe width="500" height="440" frameborder="0" align="middle" src="https://ncase.me/loopy/v1.1/?embed=1&data=[[[3,584,152,0.16,%22Fake%2520News%22,0],[4,562,498,0.16,%22Uninformed%2520Decisions%22,0],[5,723,336,0.16,%22People%2520are%2520Misinformed%22,0],[9,910,171,1,%22DON'T%2520BE%2520FOOLED%22,5]],[[3,5,12,1,0],[4,3,152,1,0],[5,4,15,1,0],[9,5,19,-1,0]],[],10%5D"></iframe>
+      <p align="center"><iframe width="500" height="440" frameborder="0" src="https://ncase.me/loopy/v1.1/?embed=1&data=[[[3,584,152,0.16,%22Fake%2520News%22,0],[4,562,498,0.16,%22Uninformed%2520Decisions%22,0],[5,723,336,0.16,%22People%2520are%2520Misinformed%22,0],[9,910,171,1,%22DON'T%2520BE%2520FOOLED%22,5]],[[3,5,12,1,0],[4,3,152,1,0],[5,4,15,1,0],[9,5,19,-1,0]],[],10%5D"></iframe></p>
       <h3>Video of our Game in Action</h3>
       <video width="300" controls>
           <source src="gamevideo.mp4" type="video/mp4">
